--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,32 +1,30 @@
 <div class="cover">
   <div class="cover__content">
     <div class="top-section">
-      <div class="title">
-        <div class="title__details">
-          <p><a>PfandMe🍾</a></p>
-          <p>22.11.2021</p>
-        </div>
-      </div>
-      <div class="top-section__content">
 
-        <div class="content-preview">
-          <h3 class="content-preview__title">Journal</h3>
-          <p class="content-preview__excerpt">autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat ulla facilsilis at vero eros et accumsan et iusto.</p>
-        </div>
-
-        <div class="content-preview">
-          <h3 class="content-preview__title">Fashion Model</h3>
-          <p class="content-preview__excerpt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio fugiat consequatur consectetur at, deleniti explicabo reprehenderit.</p>
-        </div>
+      <div class="content-preview">
+        <h3 class="content-preview__title">About us</h3>
+        <p class="content-preview__excerpt">Our goal at PfandMe is connecting people with their empty bottles. At PfandMe, we support making your home, office, or anything in between free of sticky bottles. Using PfandMe you will never have to take those heavy bottles to the grocery store again. All you have to do is make an appointment and someone will come to pick up your bottles at a designated time. We at PfandMe also support charities that help people in need. We support our community and the environment.</p>
       </div>
-    </div>
 
-    <!-- TODO  -->
-    <div class="logo">
-      <div class="logo__circle">
-        CP
+      <div class="content-preview">
+        <p class="content-preview__excerpt">
+        <ul class="list-social">
+          <li class="list-social-item">
+            <a href="http://www.facebook.com">
+              <i class="fab fa-facebook-f icon"></i></a>
+          </li>
+          <li class="list-social-item">
+            <a href="http://www.twitter.com">
+              <i class="fab fa-twitter icon"></i></a>
+          </li>
+          <li class="list-social-item">
+            <a href="http://www.linkedin.com">
+              <i class="fab fa-linkedin-in icon"></i></a>
+          </li>
+        </ul>
+      </p>
       </div>
-      <h2 class="logo__text">New session Buy</h2>
     </div>
 
     <div class="lower-section">
