--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,13 +38,13 @@
     <h5 style="text-align: center; margin: 10px 0 20px 0px; padding: 0px 40px;" data-controller="typewriter" id='typing'></h5>
     <div class="flex-dark">
       <%= link_to new_offer_path do %>
-        <div class="bttn-dark" id="btn-change">Create Offer</div>
+        <div class="bttn-dark" id="btn-change">Donate Bottles</div>
       <% end %>
     </div>
     <% else %>
     <div class="flex-dark">
       <%= link_to offers_path do %>
-        <div class="bttn-dark" id="btn-change">Look for offers</div>
+        <div class="bttn-dark" id="btn-change">Find Bottles</div>
       <% end %>
     </div>
     <% end %>
