--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,4 +17,11 @@
   background-size: cover;
   border-radius: 25px;
   border: 2px solid rgb(238, 237, 237);
+  position: sticky;
+  top: 0;
+}
+
+
+.top-spacer {
+  height: 80px;
 }
