--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
     <h5 style="text-align: center; margin: 10px 0 20px 0px; padding: 0px 40px;" data-controller="typewriter" id='typing'></h5>
     <div class="flex-dark">
       <%= link_to new_offer_path do %>
-        <div class="bttn-dark" id="btn-change">Create Offer</div>
+        <div class="bttn-dark" id="btn-change">Donate your Pfand</div>
       <% end %>
     </div>
     <% else %>
