--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,13 +4,13 @@
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
+  width: 320px;
   padding: 15px;
   background: rgba(255, 255, 255, 0.6);
 }
 
 .card-offers.history {
-  width: 38vh;
-  margin: 20px auto 0 auto;
+  // margin: 20px auto 0 auto;
 }
 
 
