Fix booking cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,8 +5,9 @@
   cursor: pointer;
   transition: 0.4s;
   min-width: 320px;
-  padding: 15px;
+  padding: 32px 28px;
   background: rgba(255, 255, 255, 0.6);
+
 }
 
 .card-offers.history {
