--- a/app/views/pages/donor_dashboard.html.erb
+++ b/app/views/pages/donor_dashboard.html.erb
@@ -5,15 +5,16 @@
         <% if @last_offer.booking.status == "accepted" %>
         <h1 class="offers-title">Your Pfander</h1>
           <div class="card-offers">
-            <% if booking.user.photo.attached? %>
-              <%= cl_image_tag booking.user.photo.key, class:"avatar-large", height: 80, width: 80, crop: :fill %>
-            <% else %>
-              <p>No image found</p>
-            <% end %>
+            <div class="d-flex justify-content-between align-items-center">
 
+              <% if booking.user.photo.attached? %>
+                <%= cl_image_tag booking.user.photo.key, class:"avatar-large", height: 80, width: 80, crop: :fill %>
+              <% end %>
               <p class="card-text"><p><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Person</title><path d="M344 144c-3.92 52.87-44 96-88 96s-84.15-43.12-88-96c-4-55 35-96 88-96s92 42 88 96z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><path d="M256 304c-87 0-175.3 48-191.64 138.6C62.39 453.52 68.57 464 80 464h352c11.44 0 17.62-10.48 15.65-21.4C431.3 352 343 304 256 304z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/></svg> &nbsp; <%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
-
-              <p><%= booking.user.story %></p>
+            </div>
+            <div class="my-5">
+                <p><%= booking.user.story %></p>
+            </div>
 
               <p><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Time</title><path d="M256 64C150 64 64 150 64 256s86 192 192 192 192-86 192-192S362 64 256 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M256 128v144h96"/></svg> <%= booking.offer.timeslot %></p>
             <% end %>
