fixed the white titles and the margin on donor dashboard

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5 {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgb(247, 217, 248);
 }
 
 h3 {
