--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,8 +7,13 @@
   min-width: 320px;
   padding: 28px 28px;
   background: rgba(255, 255, 255, 0.6);
-
 }
+
+  .show-donor {
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+  }
+
 
 .card-offers.history {
   // margin: 20px auto 0 auto;
