--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,10 @@
       }
       setTimeout('reloadIt()', 1000)();
     </script> %>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
+      <%= render 'shared/ios_pwa_links' %>
   </head>
 
   <body>
