--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,11 @@
         <% end %>
       </div>
         <input type="checkbox" id="active">
+        <% if current_user.photo.attached? %>
+          <label for="active" class="menu-btn user-avatar" style="background-image: url(<%= cl_image_path current_user.photo.key %>)" >
+        <% else %>
+          <label for="active" class="menu-btn user-avatar" style="background-image: url(<%= image_path "cover.png" %>)" >
+        <% end %>
         </label>
 
         <div class="wrapper">
